--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,6 +6,7 @@
   <title>Login</title>
   <link href="./dist/output.css" rel="stylesheet">
   <script defer src="./assets/js/login.js"></script>
+  <script defer src="./assets/js/session.js"></script>
 </head>
 <body class="bg-gray-100">
   <div class="max-w-md mx-auto bg-white shadow-lg rounded-xl p-6 mt-20">
