--- a/frontend/src/pages/Admin/account-approval.html
+++ b/frontend/src/pages/Admin/account-approval.html
@@ -43,13 +43,9 @@
       </div>
     </main>
   </div>
-  <script>
-  // Load sidebar dynamically
-  fetch("../../components/admin-sidebar.html")
-    .then(res => res.text())
-    .then(html => {
-      document.getElementById("sidebar").innerHTML = html;
-    });
-</script>
+  <script type="module">
+    import { loadSidebar } from "../../../assets/js/component-loader.js";
+    loadSidebar("sidebar"); // container id
+  </script>
 </body>
 </html>
