--- a/frontend/src/pages/Admin/manage-role.html
+++ b/frontend/src/pages/Admin/manage-role.html
@@ -45,13 +45,8 @@
     </main>
 
   </div>
-  <script>
-  // Load sidebar dynamically
-  fetch("../../components/admin-sidebar.html")
-    .then(res => res.text())
-    .then(html => {
-      document.getElementById("sidebar").innerHTML = html;
-    });
-</script>
-</body>
+  <script type="module">
+    import { loadSidebar } from "../../../assets/js/component-loader.js";
+    loadSidebar("sidebar"); // container id
+  </script>
 </html>
