--- a/frontend/src/pages/Auditor/view-transactions.html
+++ b/frontend/src/pages/Auditor/view-transactions.html
@@ -40,12 +40,9 @@
     </main>
   </div>
 
-  <script>
-    fetch("../../components/auditor-sidebar.html")
-      .then(res => res.text())
-      .then(html => {
-        document.getElementById("sidebar").innerHTML = html;
-      });
+  <script type="module">
+    import { loadSidebar } from "../../../assets/js/component-loader.js";
+    loadSidebar("sidebar"); // container id
   </script>
 </body>
 </html>
