--- a/frontend/src/pages/Citizen/dashboard.html
+++ b/frontend/src/pages/Citizen/dashboard.html
@@ -10,7 +10,7 @@
   <div class="flex h-screen">
     <!-- Sidebar -->
     <div id="sidebar"></div>
-
+    
     <!-- Main Content -->
     <main class="flex-1 p-6 overflow-y-auto">
       <h1 class="text-3xl font-bold mb-6">Citizen Dashboard</h1>
@@ -33,10 +33,21 @@
     </main>
   </div>
 
-  <script>
-    fetch("../../components/citizen-sidebar.html")
+
+  <!--
+   <script>
+    // Load sidebar dynamically
+    fetch("../../components/Citizen-sidebar.html")
       .then(res => res.text())
-      .then(html => document.getElementById("sidebar").innerHTML = html);
+      .then(html => {
+        document.getElementById("sidebar").innerHTML = html;
+      });
   </script>
+-->
+  <script type="module">
+    import { loadSidebar } from "../../../assets/js/component-loader.js";
+    loadSidebar("sidebar"); // container id
+  </script>
+
 </body>
 </html>
