Logout Button Fixed and UI changes

--- a/frontend/src/pages/Citizen/dashboard.html
+++ b/frontend/src/pages/Citizen/dashboard.html
@@ -29,6 +29,43 @@
           <h2 class="text-lg font-semibold">Reports Available</h2>
           <p class="mt-2 text-2xl font-bold text-green-700">8</p>
         </div>
+        <div class="bg-white p-6 rounded-lg shadow-md">
+          <h2 class="text-lg font-semibold">Total Spent on Infrastructure</h2>
+          <p class="mt-2 text-2xl font-bold text-green-700">124,230,256.00 PHP</p>
+        </div>
+         <div class="bg-white p-6 rounded-lg shadow-md">
+          <h2 class="text-lg font-semibold">Total Spent on Education</h2>
+          <p class="mt-2 text-2xl font-bold text-green-700">124,230,256.00 PHP</p>
+        </div>
+         <div class="bg-white p-6 rounded-lg shadow-md">
+          <h2 class="text-lg font-semibold">Total Spent on Others</h2>
+          <p class="mt-2 text-2xl font-bold text-green-700">124,230,256.00 PHP</p>
+        </div>
+      </div>
+
+      <!-- Reecent Projects -->
+      <div class="mt-10">
+        <h2 class="text-2xl font-bold mb-4">Recent Projects</h2>
+        <div class="overflow-x-auto bg-white rounded-lg shadow-md">
+          <table class="min-w-full text-left">
+            <thead>
+              <tr class="bg-gray-200">
+              <th class="px-4 py-2">Project ID</th>
+              <th class="px-4 py-2">Title</th>
+              <th class="px-4 py-2">Category</th>
+              <th class="px-4 py-2">Description</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr class="border-t">
+              <td class="px-4 py-2">P-001</td>
+              <td class="px-4 py-2">School Building</td>
+              <td class="px-4 py-2">Infrastructure</td>
+              <td class="px-4 py-2">Construction of 10-classroom building</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
       </div>
     </main>
   </div>
