Added Landing Page

--- a/frontend/src/pages/Citizen/dashboard.html
+++ b/frontend/src/pages/Citizen/dashboard.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Citizen Dashboard</title>
   <link href="../../../dist/output.css" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/a2e0c9b1d6.js" crossorigin="anonymous"></script>
 </head>
 <body class="bg-gray-100 font-sans">
   <div class="flex h-screen">
@@ -85,6 +86,6 @@
     import { loadSidebar } from "../../../assets/js/component-loader.js";
     loadSidebar("sidebar"); // container id
   </script>
-
+  <script src="https://kit.fontawesome.com/a2e0c9b1d6.js" crossorigin="anonymous"></script>
 </body>
 </html>
