--- a/frontend/src/pages/Auth/registration.html
+++ b/frontend/src/pages/Auth/registration.html
@@ -15,9 +15,9 @@
 
       <!-- Tabs -->
       <div class="flex justify-center border-b mb-6">
-        <button id="govagency-tab" class="tab-btn px-4 py-2 font-semibold text-blue-600 border-b-2 border-blue-600">Government Agency</button>
-        <button id="auditor-tab" class="tab-btn px-4 py-2 text-gray-600 hover:text-blue-600">Auditor</button>
-        <button id="citizen-tab" class="tab-btn px-4 py-2 text-gray-600 hover:text-blue-600">Citizen</button>
+        <button id="govagency-tab" class="tab-btn px-4 py-2 font-semibold text-green-600 border-b-2 border-green-600">Government Agency</button>
+        <button id="auditor-tab" class="tab-btn px-4 py-2 text-gray-600 hover:text-green-600">Auditor</button>
+        <button id="citizen-tab" class="tab-btn px-4 py-2 text-gray-600 hover:text-green-600">Citizen</button>
       </div>
 
       <!-- Forms -->
@@ -31,7 +31,7 @@
           <input type="text" name="govId" placeholder="Government/Employee ID" class="w-full p-2 border rounded">
           <input type="text" name="contact" placeholder="Contact Information" class="w-full p-2 border rounded">
           <input type="password" name="password" placeholder="Password" class="w-full p-2 border rounded">
-          <button class="w-full bg-blue-600 text-white p-2 rounded hover:bg-blue-700">Register</button>
+          <button class="w-full bg-green-600 text-white p-2 rounded hover:bg-green-700">Register</button>
         </form>
       </div>
 
@@ -44,7 +44,7 @@
           <input type="text" name="role" placeholder="Role (Auditor, Investigator...)" class="w-full p-2 border rounded">
           <input type="text" name="contact" placeholder="Contact Information" class="w-full p-2 border rounded">
           <input type="password" name="password" placeholder="Password" class="w-full p-2 border rounded">
-          <button class="w-full bg-blue-600 text-white p-2 rounded hover:bg-green-700">Register</button>
+          <button class="w-full bg-green-600 text-white p-2 rounded hover:bg-green-700">Register</button>
         </form>
       </div>
 
@@ -54,11 +54,11 @@
           <input type="email" name="email" placeholder="Email Address" class="w-full p-2 border rounded">
           <input type="text" name="contact" placeholder="Contact Information" class="w-full p-2 border rounded">
           <input type="password" name="password" placeholder="Password" class="w-full p-2 border rounded">
-          <button class="w-full bg-blue-600 text-white p-2 rounded hover:bg-purple-700">Register</button>
+          <button class="w-full bg-green-600 text-white p-2 rounded hover:bg-green-700">Register</button>
         </form>
       </div>
 
-      <p class="text-center text-sm mt-6">Already have an account? <a href="login.html" class="text-blue-600">Login here</a></p>
+      <p class="text-center text-sm mt-6">Already have an account? <a href="./login.html" class="text-green-600">Login here</a></p>
     </div>
   </div>
 
@@ -68,10 +68,10 @@
 
     tabs.forEach((tab, index) => {
       tab.addEventListener("click", () => {
-        tabs.forEach(t => t.classList.remove("text-blue-600", "border-b-2", "border-blue-600"));
+        tabs.forEach(t => t.classList.remove("text-green-600", "border-b-2", "border-green-600"));
         contents.forEach(c => c.classList.add("hidden"));
 
-        tab.classList.add("text-blue-600", "border-b-2", "border-blue-600");
+        tab.classList.add("text-green-600", "border-b-2", "border-green-600");
         contents[index].classList.remove("hidden");
       });
     });
